--- a/css/recordTrack.css
+++ b/css/recordTrack.css
@@ -1,30 +1,47 @@
 
 #chatBox{
-	border:3px solid black;
 	height:100%;
+	border:1px solid black;
+	background-color: #F4F4F4;
 }
 #trackSpace{
-	border:2px solid black;
 	height:100%;
+	border:1px solid black;
+	background-color: white;
+	position:relative;
 }
-#allTracks{
-}
+
 #trackControl{
 	text-align: center;
-	height:10%;
-	border:3px solid black;
+	height:auto;
+	margin:2% 25% 0% 25%;
 }
 #trackControl input{
-	height:15%;
-	width:15%;
+	height:40%;
+	width:40%;
+
 }
 #subBody {
-	height:89%;
+	height:88%;
+	padding-left:3%;
+	padding-right:3%;
 }
 #sessionTitle{
-	padding-left:5%;
-	height:5%;
+	height:auto;
+
 }
 #sessionTitle h3{
-	margin:0%;
+	margin-top:2%;
+	padding:0%;
 }
+hr{
+	margin-top:10px;
+}
+#newTrack{
+	border:2px solid black;
+}
+#bottomHalf{
+	position:absolute; 
+	bottom:5%;
+}
+
