--- a/css/base.css
+++ b/css/base.css
@@ -1,27 +1,72 @@
 #header{
-	background-color: purple;
+	background-color: #303030;
 	height:auto;
-	color:white;
-	padding:1% 0% 1% 2%;
+	padding:0% 0% 0% 3%;
 }
 #header h1,h4{
 	margin:0%;
 }
-.logo>a{
-	color:white;
+.logo{
+	float:left;
+	margin-top: .5%;
+}
+.logo img{
+	height:70%;
+	width:70%;
 }
 .logo>a:hover{
 	text-decoration: none !important;
 }
+.container{
+	padding-left: 1.8%;
+}
+nav{
+	padding-top: .5%;
+	padding-right: 10%;
+	float:right;
+}
 .navbar-nav>li>a{
-	color:white;
+	color:#cccccc;
 	font-size:110%;	
 }
 .navbar-nav>li>a:hover,
 .navbar-nav>li>a:focus{
-	color:gray;
+	color:#FFFFFF;
 	background-color: transparent !important;
 }
 html,body{
 	height:100%;
+	color:#303030;
+	font-family: PT Sans, Helvetica;
 }
+a{
+	color:#303030;
+}
+a:hover{
+	color:teal;
+	text-decoration: none !important;
+}
+.btn-custom {
+  background-color: hsl(185, 60%, 35%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2dacb7", endColorstr="#23858e");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#2dacb7), to(#23858e));
+  background-image: -moz-linear-gradient(top, #2dacb7, #23858e);
+  background-image: -ms-linear-gradient(top, #2dacb7, #23858e);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2dacb7), color-stop(100%, #23858e));
+  background-image: -webkit-linear-gradient(top, #2dacb7, #23858e);
+  background-image: -o-linear-gradient(top, #2dacb7, #23858e);
+  background-image: linear-gradient(#2dacb7, #23858e);
+  border-color: #23858e #23858e hsl(185, 60%, 32.5%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.16);
+  -webkit-font-smoothing: antialiased;
+}
+/*
+gray font: #ccccccc;
+header background :#303030;
+teal for color
+white font on highlight
+
+
+*/
