--- a/css/recordTrack.css
+++ b/css/recordTrack.css
@@ -3,6 +3,7 @@
 	height:100%;
 	border:1px solid black;
 	padding:0%;
+	#background-color: #f6f6f6;
 }
 #chatInput{
 	text-align: center;
@@ -14,7 +15,7 @@
 }
 textarea{
 	width:100%;
-	padding-left: 0%;
+	padding-left: 1%;
 	margin:0%;
 }
 #chatText{
