About page stuff

--- a/css/base.css
+++ b/css/base.css
@@ -70,7 +70,7 @@ a:hover{
 }
 /*
 gray font: #ccccccc;
-header background :#303030;
+header background :#303030;om
 teal for color
 white font on highlight
 
