--- a/css/recordTrack.css
+++ b/css/recordTrack.css
@@ -3,7 +3,7 @@
 	height:100%;
 	border:1px solid black;
 	padding:0%;
-	#background-color: #f6f6f6;
+	background-color: #fafafa;
 }
 #chatInput{
 	text-align: center;
@@ -33,7 +33,8 @@ textarea{
 #trackControl{
 	text-align: center;
 	height:auto;
-	margin:2% 25% 0% 25%;
+	position: absolute;
+	bottom: 2.5%;
 }
 #trackControl span{
 	font-size:40px;
@@ -42,6 +43,7 @@ textarea{
 #trackControl span:hover{
 	color:teal;
 	cursor: pointer;
+
 }
 #subBody {
 	height:90%;
@@ -52,6 +54,7 @@ textarea{
 }
 #sessionTitle{
 	height:auto;
+
 }
 #sessionTitle h3{
 	margin:0%;
@@ -61,20 +64,23 @@ hr{
 	margin-top:10px;
 }
 #newTrack{
-}
-#bottomHalf{
-	position:absolute; 
-	bottom:1%;
+	#border:2px solid black;
+	height:12%;
 }
 
 #allTracks{
-	height:65%;
+	height:60%;
 	overflow-y:scroll;
+	
 }
 
 .waveform{
-	border-style: solid;
-	border-radius: 1px;
+	#border-style: solid;
+	#border-radius: 1px;
 	width:100%;
-	height:50px;
+	height:60%;
+}
+.waveform>img{
+	width:100%;
+	height:100%;
 }
